# CalculatorImageArt

./: CMakeLists.txt  README.md
art/: hp10b.png.Ernst  hp14b.png.Midas  hp17b.png.Trader  hp17bii.png.Trader-II  hp19bii.png.Tycoon-II  hp20s.png.Erni  hp21s.png.Monte-Carlo  hp27s.png.Mentor  hp28c.png.Paladin  hp28s.png.Orlando  hp32sii.png.Nardo  hp42s.png.Davinci
src/: png2rom.c
